# pynsor

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
archlinux/: PKGBUILD  pynsor.conf  pynsor.install  pynsor.service  pynsor.sysusers
pynsor/: monitor.py
pynsor/postgres/: __init__.py  connection.py
pynsor/sensors/: __init__.py  diskstats.py  lm_sensors.py  netstat.py  psutils.py  ryzen_power.py  sensor.py  smartctl.py  stat.py
